# TeleXperience_robot_ros1_ws

./: .gitignore  README.md  build.sh  install_dependencies.sh  install_tmux.sh  run_Gen_sim.sh  run_OpenLoong.sh
scripts/controller_tool/: README.md
scripts/controller_tool/config/: tool.yml
scripts/controller_tool/script/: joint_control.py
src/io_teleop_robot_control_node/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt
src/io_teleop_robot_control_node/io_teleop_robot_descriptions/OpenLoong/: controller_v2.yml  mocap_to_robot_command_v2.yml  vr_configs.yml
src/io_teleop_robot_control_node/io_teleop_robot_descriptions/OpenLoong/azureloong_description/meshes/: Link_arm_l_07.STL
src/io_teleop_robot_control_node/io_teleop_robot_descriptions/OpenLoong/azureloong_description/urdf/: AzureLoong.urdf  AzureLoong_sr.urdf
src/io_teleop_robot_control_node/io_teleop_robot_descriptions/OpenLoong/sr_description/robots/: sr_hand.urdf  sr_hand.urdf.xacro  sr_ur_biotac.urdf.xacro
src/io_teleop_robot_control_node/io_teleop_robot_descriptions/OpenLoong/urdf/: AzureLoong_sr.urdf
src/io_teleop_robot_control_node/io_teleop_robot_utils/: robot_module.py  utils.py
src/io_teleop_robot_control_node/scripts/: general_sim_robot_control_node.py  openloong_controller_node.py  uni_constraint_control_node.py
